[package]
name = "grizzly_arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "*"
borsh-derive = "*"
solana-program = "1.14.*"

[lib]
name = "cclib"
crate-type = ["cdylib", "lib"]
