[package]
name = "grizzly_arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
bs58 = "*"
borsh = "*"
borsh-derive = "*"
solana-program = "1.14.*"
mpl-token-metadata = {version = "*", features = ["no-entrypoint"]}

[lib]
name = "grizzly_arena"
crate-type = ["cdylib", "lib"]
